<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_label">Search</string>
    <string name="text_hint">Enter search terms</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="subtitle_label">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="siteFilter_hint">Enter website address</string>
    <string name="btn_label">Save</string>
    <string name="fullimage_label">Image Display</string>

</resources>
